--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,14 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "firebase": "^10.3.1",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
+    "redux-persist": "^6.0.0",
+    "swiper": "^10.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
